# legal_ai_bot

./: .gitignore  ReadMe.md  main.py  prompt.md  pyproject.toml  requirements.txt  test.ipynb
rag/: __init__.py  chunking.py  code.ipynb  embeddings.py  llm.py  pdf.py  prompts.py  query.py  store.py
tools/: TOOLS_DOCUMENTATION.md  __init__.py  case_search.py  complaint_generator.py  contract_analyzer.py  jurisdiction_detector.py  legal_search.py
ui/: app.py
