[project]
name = "legal-ai-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.13.2",
    "gradio>=6.10.0",
    "langchain>=1.2.14",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.2.1",
    "langchain-text-splitters>=1.1.1",
    "openai>=2.30.0",
    "openai-agents>=0.13.3",
    "pypdf>=6.9.2",
    "sentence-transformers>=5.3.0",
]
